Added mobile version

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Крохмалюк Сергей - резюме</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
@@ -20,7 +21,7 @@
 
   <div class="row">
       <div class="five columns">
-        <img src="images/IMG_1924.jpeg" alt="[Фото]" class="u-max-full-width">
+        <img src="images/IMG_1924.jpeg" alt="Фото" class="u-max-full-width">
       </div>
       <div class="seven columns">
         <h3>Обо мне</h3>
