Fixing code style 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Крохмалюк Сергей - резюме</title>
+  <title>Крохмалюк Сергей &mdash; резюме</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
 </head>
@@ -17,73 +17,83 @@
       <h2>Разработчик на Ruby on Rails</h2>
     </div>
   </div>
-  <hr>
 
   <div class="row">
+    <div class="top_line">
       <div class="five columns">
-        <img src="images/IMG_1924.jpeg" alt="Фото" class="u-max-full-width">
+        <div class="image">
+          <img src="images/IMG_1924.jpeg" alt="Фото" class="u-max-full-width">
+        </div>
       </div>
       <div class="seven columns">
+        <p></p>
         <h3>Обо мне</h3>
         <ul>
           <li>Возраст: 28 лет</li>
           <li>Город: Тверь</li>
-          <li>Телефон: +7 952 066 19-19</li>
-          <li>Email: berkutakarapper@gmail.com</li>
+          <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>
+          <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>
           <li>Языки: Русский, Английский</li>
           <li>Github: <a href="https://github.com/Grimr5">Grimr5</a></li>
         </ul>
       </div>
     </div>
-  <hr>
+  </div>
 
   <div class="row">
-    <div class="five columns">
-      <h3>Навыки</h3>
-      <ul>
-        <li>Ruby</li>
-        <li>Ruby on Rails</li>
-        <li>Html</li>
-        <li>Css</li>
-      </ul>
-    </div>
-    <div class="seven columns">
-      <h3>Места работы</h3>
-      <ul>
-        <li>
-          Май 2016 - по настоящее время
-          <a href="http://penates.fabulagroup.ru">Penates</a>
-        </li>
-        <li>
-          Июль 2014 - Июль 2015
-          <a href="http://mil.ru/">Армия России</a>
-        </li>
-      </ul>
+    <div class="top_line">
+      <div class="five columns">
+        <p></p>
+        <h3>Навыки</h3>
+        <ul>
+          <li>Ruby</li>
+          <li>Ruby on Rails</li>
+          <li>Html</li>
+          <li>Css</li>
+        </ul>
+      </div>
+      <div class="seven columns">
+        <p></p>
+        <h3>Места работы</h3>
+        <ul>
+          <li>
+            Май 2016 &ndash; по настоящее время
+            <a href="http://penates.fabulagroup.ru">Penates</a>
+          </li>
+          <li>
+            Июль 2014 &ndash; Июль 2015
+            <a href="http://mil.ru/">Армия России</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <hr>
 
   <div class="row">
-    <div class="six columns">
-      <h3>Образование</h3>
-      <ul>
-        <li>
-          2009 - 2014: Тверской Государственный Технический университет, Факультет информационных технологий.
-          Специальность - биомедицинская инженерия.
-        </li>
-      </ul>
-    </div>
-    <div class="six columns">
-      <h3>Курсы, сертификаты</h3>
-      <ul>
-        <li>
-          2020 - 2021: Интенсив по Ruby on Rails. Хороший программист
-          <a href="https://goodprogrammer.ru">goodprogrammer.ru</a>
-        </li>
-      </ul>
+    <div class="top_line">
+      <div class="six columns">
+        <p></p>
+        <h3>Образование</h3>
+        <ul>
+          <li>
+            2009 &ndash; 2014: Тверской Государственный Технический университет, Факультет информационных технологий.
+            Специальность &mdash; биомедицинская инженерия.
+          </li>
+        </ul>
+      </div>
+      <div class="six columns">
+        <p></p>
+        <h3>Курсы, сертификаты</h3>
+        <ul>
+          <li>
+            2020 &ndash; 2021: Интенсив по Ruby on Rails. Хороший программист
+            <a href="https://goodprogrammer.ru">goodprogrammer.ru</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <hr>
+
   </div>
 </body>
 </html>
