--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <div class="container">
   <div class="row">
     <div class="eleven columns">
-      <p></p>
       <h1>Крохмалюк Сергей</h1>
       <h2>Разработчик на Ruby on Rails</h2>
     </div>
@@ -26,16 +25,17 @@
         </div>
       </div>
       <div class="seven columns">
-        <p></p>
-        <h3>Обо мне</h3>
-        <ul>
-          <li>Возраст: 28 лет</li>
-          <li>Город: Тверь</li>
-          <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>
-          <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>
-          <li>Языки: Русский, Английский</li>
-          <li>Github: <a href="https://github.com/Grimr5">Grimr5</a></li>
-        </ul>
+        <div class='my_info'>
+          <h3>Обо мне</h3>
+          <ul>
+            <li>Возраст: 28 лет</li>
+            <li>Город: Тверь</li>
+            <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>
+            <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>
+            <li>Языки: Русский, Английский</li>
+            <li>Github: <a href="https://github.com/Grimr5">Grimr5</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
@@ -43,28 +43,30 @@
   <div class="row">
     <div class="top_line">
       <div class="five columns">
-        <p></p>
-        <h3>Навыки</h3>
-        <ul>
-          <li>Ruby</li>
-          <li>Ruby on Rails</li>
-          <li>Html</li>
-          <li>Css</li>
-        </ul>
+        <div class='my_info'>
+          <h3>Навыки</h3>
+          <ul>
+            <li>Ruby</li>
+            <li>Ruby on Rails</li>
+            <li>Html</li>
+            <li>Css</li>
+          </ul>
+        </div>
       </div>
       <div class="seven columns">
-        <p></p>
-        <h3>Места работы</h3>
-        <ul>
-          <li>
-            Май 2016 &ndash; по настоящее время
-            <a href="http://penates.fabulagroup.ru">Penates</a>
-          </li>
-          <li>
-            Июль 2014 &ndash; Июль 2015
-            <a href="http://mil.ru/">Армия России</a>
-          </li>
-        </ul>
+        <div class='my_info'>
+          <h3>Места работы</h3>
+          <ul>
+            <li>
+              Май 2016 &ndash; по настоящее время
+              <a href="http://penates.fabulagroup.ru">Penates</a>
+            </li>
+            <li>
+              Июль 2014 &ndash; Июль 2015
+              <a href="http://mil.ru/">Армия России</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
@@ -72,24 +74,26 @@
   <div class="row">
     <div class="top_line">
       <div class="six columns">
-        <p></p>
-        <h3>Образование</h3>
-        <ul>
-          <li>
-            2009 &ndash; 2014: Тверской Государственный Технический университет, Факультет информационных технологий.
-            Специальность &mdash; биомедицинская инженерия.
-          </li>
-        </ul>
+        <div class='my_info'>
+          <h3>Образование</h3>
+          <ul>
+            <li>
+              2009 &ndash; 2014: Тверской Государственный Технический университет, Факультет информационных технологий.
+              Специальность &mdash; биомедицинская инженерия.
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="six columns">
-        <p></p>
-        <h3>Курсы, сертификаты</h3>
-        <ul>
-          <li>
-            2020 &ndash; 2021: Интенсив по Ruby on Rails. Хороший программист
-            <a href="https://goodprogrammer.ru">goodprogrammer.ru</a>
-          </li>
-        </ul>
+        <div class='my_info'>
+          <h3>Курсы, сертификаты</h3>
+          <ul>
+            <li>
+              2020 &ndash; 2021: Интенсив по Ruby on Rails. Хороший программист
+              <a href="https://goodprogrammer.ru">goodprogrammer.ru</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
