--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="eleven columns">
       <p></p>
       <h1>Крохмалюк Сергей</h1>
-      <h2>Разработчик на Ruby on Rails</h2>
+      <h2>Frontend разработчик</h2>
     </div>
   </div>
   <hr>
