--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="eleven columns">
       <h1>Крохмалюк Сергей</h1>
-      <h2>Разработчик на Ruby on Rails</h2>
+      <h2>Frontend Разработчик</h2>
     </div>
   </div>
 
