--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class='my_info'>
           <h3>Обо мне</h3>
           <ul>
-            <li>Возраст: 28 лет</li>
+            <li>Возраст: 31 год</li>
             <li>Город: Тверь</li>
             <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>
             <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>
