--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h3>Места работы</h3>
           <ul>
             <li>
-              Май 2016 &ndash; по настоящее время
+              Май 2016 &ndash; Декабрь 2021
               <a href="http://penates.fabulagroup.ru">Penates</a>
             </li>
             <li>
