--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Крохмалюк Сергей &mdash; резюме</title>
+  <title>Крохмалюк Сергей &mdash; разработка сайтов</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
 </head>
@@ -13,7 +13,6 @@
   <div class="row">
     <div class="eleven columns">
       <h1>Крохмалюк Сергей</h1>
-      <h2>Frontend Разработчик</h2>
     </div>
   </div>
 
@@ -26,15 +25,24 @@
       </div>
       <div class="seven columns">
         <div class='my_info'>
-          <h3>Обо мне</h3>
+          <h2>Frontend Разработчик</h2>
+          <h3>Навыки</h3>
           <ul>
-            <li>Возраст: 31 год</li>
-            <li>Город: Тверь</li>
-            <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>
-            <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>
-            <li>Языки: Русский, Английский</li>
-            <li>Github: <a href="https://github.com/Grimr5">Grimr5</a></li>
+            <li>Html</li>
+            <li>Css</li>
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>Ruby on Rails</li>
           </ul>
+          <!--          <h3>Обо мне</h3>-->
+          <!--          <ul>-->
+          <!--            <li>Возраст: 31 год</li>-->
+          <!--            <li>Город: Тверь</li>-->
+          <!--            <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>-->
+          <!--            <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>-->
+          <!--            <li>Языки: Русский, Английский</li>-->
+          <!--            <li>Github: <a href="https://github.com/Grimr5">Grimr5</a></li>-->
+          <!--          </ul>-->
         </div>
       </div>
     </div>
@@ -42,30 +50,17 @@
 
   <div class="row">
     <div class="top_line">
-      <div class="five columns">
-        <div class='my_info'>
-          <h3>Навыки</h3>
-          <ul>
-            <li>Ruby</li>
-            <li>Ruby on Rails</li>
-            <li>Html</li>
-            <li>Css</li>
-          </ul>
-        </div>
-      </div>
-      <div class="seven columns">
-        <div class='my_info'>
-          <h3>Места работы</h3>
-          <ul>
-            <li>
-              Май 2016 &ndash; Декабрь 2021
-              <a href="http://penates.fabulagroup.ru">Penates</a>
-            </li>
-            <li>
-              Июль 2014 &ndash; Июль 2015
-              <a href="http://mil.ru/">Армия России</a>
-            </li>
-          </ul>
+      <div class="eleven columns">
+        <div class="my_info">
+          <h4>Обо мне</h4>
+          <p>Привет, меня зовут Сергей</p>
+          <p>Я занимаюсь разработкой крутых продающих сайтов под разные задачи. Имею опыт создания одностраничных сайтов
+            разной сложности с адаптивом под любые утройства. Ответственный и качественный подход к каждому проекту. </p>
+          <p>&ndash; Стоимость одностраничного сайта до 5 блоков &ndash; 4000 рублей</p>
+          <p>&ndash; Дополнительный блок &ndash; 1000 рублей за каждый</p>
+          <p>&ndash; Бесплатные 2 правки, далее 500 рублей за правку</p>
+
+          <p>Cрок выполнения работ от 3 до 7 рабочих дней, в зависимости от сложности.</p>
         </div>
       </div>
     </div>
@@ -75,29 +70,47 @@
     <div class="top_line">
       <div class="six columns">
         <div class='my_info'>
-          <h3>Образование</h3>
+          <h4>Образование</h4>
           <ul>
             <li>
               2009 &ndash; 2014: Тверской Государственный Технический университет, Факультет информационных технологий.
-              Специальность &mdash; биомедицинская инженерия.
             </li>
           </ul>
         </div>
       </div>
       <div class="six columns">
         <div class='my_info'>
-          <h3>Курсы, сертификаты</h3>
+          <h4>Курсы, сертификаты</h4>
           <ul>
             <li>
               2020 &ndash; 2021: Интенсив по Ruby on Rails. Хороший программист
               <a href="https://goodprogrammer.ru">goodprogrammer.ru</a>
             </li>
+            <li>
+              2022 &ndash; 2023: Frontend разработчик. Айтилогия
+              <a href="https://itlogia.ru">itlogia.ru</a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </div>
 
+  <div class="row">
+    <div class="top_line">
+      <div class="six columns">
+        <div class="my_info">
+          <h4>Связь со мной</h4>
+          <ul>
+            <li>Город: Тверь</li>
+            <li>Телефон: <a href="tel:+79520661919">+7 952 066 19-19</a></li>
+            <li>Email: <a class="link" href="mailto:berkutakarapper@gmail.com">berkutakarapper@gmail.com</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
+
+</div>
 </body>
 </html>
